// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webphone panels should display CallNotClientPanel with status: Registered 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="callNotClientPanelContainer"
        >
          <Component>
            <div>
              <span>
                Статус:
              </span>
              <span>
                Готов к работе
              </span>
            </div>
          </Component>
          <Input
            dontShowPlaceholderIfFocused={true}
            onChange={[Function]}
            placeholder="Телефон не клиента в формате +7..."
            status={null}
            value=""
          >
            <div
              className="input      "
            >
              <div
                className="input_container "
                onFocus={[Function]}
                tabIndex={0}
              >
                <input
                  className=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  placeholder="Телефон не клиента в формате +7...  "
                  type=""
                  value=""
                />
                <div
                  className="controls controlsFocusedNoPlaceholder"
                >
                  <Memo()
                    onClick={[Function]}
                  >
                    <div
                      className="close "
                      onClick={[Function]}
                    />
                  </Memo()>
                </div>
              </div>
            </div>
          </Input>
          <Connect(Component)
            client=""
            disabled={true}
          >
            <Component
              callEnded={false}
              callFromWebphone={[Function]}
              client=""
              disabled={true}
              setCallMetaInfo={[Function]}
            >
              <div
                className="callButtonContainer "
              >
                <Component
                  client=""
                  disabled={true}
                  setCallRecipient={[Function]}
                  userName=""
                >
                  <Component
                    buttonClassName="button "
                    colorType="positive"
                    disabled={true}
                    icon="phone"
                    iconClassName="callButtonIconDisabled"
                    onClick={[Function]}
                    text="Позвонить не клиенту"
                  >
                    <Button
                      className="button "
                      colorType="positive"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <button
                        className="button positive disabled button "
                        onClick={[Function]}
                      >
                        <span
                          className=""
                        >
                          <span
                            className="webphoneButton"
                          >
                            <icon-mock
                              className="webphoneButton_icon callButtonIconDisabled"
                            />
                            <span
                              className="webphoneButton_text"
                            >
                              Позвонить не клиенту
                            </span>
                          </span>
                        </span>
                      </button>
                    </Button>
                  </Component>
                </Component>
                <Component
                  callSource="default_call_source"
                  disabled={true}
                  onSelect={[Function]}
                >
                  <Component
                    colorType="positive"
                    disabled={true}
                    displayArrowIcon={true}
                    id="call-source-1"
                    initialSelectedValue="default_call_source"
                    markIfNonDefaultChoice={true}
                    onSelect={[Function]}
                    options={
                      Array [
                        Object {
                          "isDefault": true,
                          "label": "Позвонить на номер",
                          "value": "default_call_source",
                        },
                        Object {
                          "label": "Позвонить от лица клиента",
                          "value": "custom_call_source",
                        },
                      ]
                    }
                  >
                    <Component
                      className=""
                      colorType="positive"
                      disabled={true}
                      displayArrowIcon={true}
                      popupContent={
                        <Unknown
                          className="options"
                          colorType="positive"
                          id="call-source-1"
                          initialSelectedValue="default_call_source"
                          onSelect={[Function]}
                          options={
                            Array [
                              Object {
                                "isDefault": true,
                                "label": "Позвонить на номер",
                                "value": "default_call_source",
                              },
                              Object {
                                "label": "Позвонить от лица клиента",
                                "value": "custom_call_source",
                              },
                            ]
                          }
                        />
                      }
                    >
                      <div
                        className="container containerColor_positive verticalDropDirection_down horizontalDropDirection_right dropDirection_down_right"
                      >
                        <Button
                          basic={true}
                          buttonRef={
                            Object {
                              "current": <button
                                class="button positive basic disabled popupButton  displayArrowIcon "
                              >
                                <span
                                  class=""
                                >
                                  ▲
                                </span>
                              </button>,
                            }
                          }
                          childrenRef={
                            Object {
                              "current": <span
                                class=""
                              >
                                ▲
                              </span>,
                            }
                          }
                          className="popupButton  displayArrowIcon "
                          colorType="positive"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <button
                            className="button positive basic disabled popupButton  displayArrowIcon "
                            onClick={[Function]}
                          >
                            <span
                              className=""
                            >
                              ▲
                            </span>
                          </button>
                        </Button>
                      </div>
                    </Component>
                  </Component>
                </Component>
              </div>
            </Component>
          </Connect(Component)>
          <Component>
            <Button
              basic={true}
              className="button"
              isLoading={false}
              onClick={[Function]}
            >
              <button
                className="button primary basic button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Скачать лог телефонии
                </span>
              </button>
            </Button>
          </Component>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;

exports[`Webphone panels should display CurrentCallPanel with status: Registered, callStatus: Ended (call a client) 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="currentCallPanelContainer"
        >
          <Component>
            <div
              className="callMetaInfo"
            >
              <Link
                className="callMetaInfoPrimary"
                href="#/clients/1/info"
                target="_blank"
              >
                <a
                  className="link  callMetaInfoPrimary "
                  href="#/clients/1/info"
                  onClick={[Function]}
                  rel="noopener"
                  target="_blank"
                >
                  Тестовый Тест Тестович
                </a>
              </Link>
              <span
                className="callMetaInfoPhoneNumber callMetaInfoSecondary"
              >
                +1234567890
              </span>
            </div>
          </Component>
          <Component>
            <div
              className="callStatus"
            >
              <icon-mock
                className="callStatusIcon"
              />
              <span>
                Звонок завершен
              </span>
            </div>
          </Component>
          <div
            className="callActionsSection"
          >
            <Component>
              <Button
                basic={true}
                className="button"
                isLoading={false}
                onClick={[Function]}
              >
                <button
                  className="button primary basic button"
                  onClick={[Function]}
                >
                  <span
                    className=""
                  >
                    Скачать лог телефонии
                  </span>
                </button>
              </Button>
            </Component>
          </div>
          <Memo()
            onClick={[Function]}
          >
            <div
              className="close "
              onClick={[Function]}
            />
          </Memo()>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;

exports[`Webphone panels should display CurrentCallPanel with status: Registered, callStatus: accepted (call a client) 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="currentCallPanelContainer"
        >
          <Component>
            <div
              className="callMetaInfo"
            >
              <Link
                className="callMetaInfoPrimary"
                href="#/clients/1/info"
                target="_blank"
              >
                <a
                  className="link  callMetaInfoPrimary "
                  href="#/clients/1/info"
                  onClick={[Function]}
                  rel="noopener"
                  target="_blank"
                >
                  Тестовый Тест Тестович
                </a>
              </Link>
              <span
                className="callMetaInfoPhoneNumber callMetaInfoSecondary"
              >
                +1234567890
              </span>
            </div>
          </Component>
          <Component>
            <div
              className="callStatus"
            >
              <icon-mock
                className="callStatusIcon"
              />
              <Component>
                <span>
                  00:00:00
                </span>
              </Component>
            </div>
          </Component>
          <div
            className="callActionsSection"
          >
            <Component>
              <Button
                basic={true}
                className="button"
                isLoading={false}
                onClick={[Function]}
              >
                <button
                  className="button primary basic button"
                  onClick={[Function]}
                >
                  <span
                    className=""
                  >
                    Скачать лог телефонии
                  </span>
                </button>
              </Button>
            </Component>
            <Component>
              <Component
                buttonClassName="button holdButton"
                colorType="warning"
                icon="pause"
                iconClassName="holdIcon"
                onClick={[Function]}
                text="Удержать"
              >
                <Button
                  className="button holdButton"
                  colorType="warning"
                  onClick={[Function]}
                >
                  <button
                    className="button warning button holdButton"
                    onClick={[Function]}
                  >
                    <span
                      className=""
                    >
                      <span
                        className="webphoneButton"
                      >
                        <icon-mock
                          className="webphoneButton_icon holdIcon"
                        />
                        <span
                          className="webphoneButton_text"
                        >
                          Удержать
                        </span>
                      </span>
                    </span>
                  </button>
                </Button>
              </Component>
            </Component>
            <Component>
              <Component
                buttonClassName="button"
                colorType="warning"
                icon="microphone"
                iconClassName="microphoneIcon"
                onClick={[Function]}
                text="Выкл. микрофон"
              >
                <Button
                  className="button"
                  colorType="warning"
                  onClick={[Function]}
                >
                  <button
                    className="button warning button"
                    onClick={[Function]}
                  >
                    <span
                      className=""
                    >
                      <span
                        className="webphoneButton"
                      >
                        <icon-mock
                          className="webphoneButton_icon microphoneIcon"
                        />
                        <span
                          className="webphoneButton_text"
                        >
                          Выкл. микрофон
                        </span>
                      </span>
                    </span>
                  </button>
                </Button>
              </Component>
            </Component>
          </div>
          <Component>
            <Button
              className="button"
              colorType="negative"
              onClick={[Function]}
            >
              <button
                className="button negative button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Завершить
                </span>
              </button>
            </Button>
          </Component>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;

exports[`Webphone panels should display CurrentCallPanel with status: Registered, callStatus: accepted (call not a client) 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="currentCallPanelContainer"
        >
          <Component>
            <div
              className="callMetaInfo"
            >
              <span
                className="callMetaInfoPhoneNumber callMetaInfoPrimary callNotAClient"
              >
                +1234567890
              </span>
            </div>
          </Component>
          <Component>
            <div
              className="callStatus"
            >
              <icon-mock
                className="callStatusIcon"
              />
              <Component>
                <span>
                  00:00:00
                </span>
              </Component>
            </div>
          </Component>
          <div
            className="callActionsSection"
          >
            <Component>
              <Button
                basic={true}
                className="button"
                isLoading={false}
                onClick={[Function]}
              >
                <button
                  className="button primary basic button"
                  onClick={[Function]}
                >
                  <span
                    className=""
                  >
                    Скачать лог телефонии
                  </span>
                </button>
              </Button>
            </Component>
            <Component>
              <Component
                buttonClassName="button holdButton"
                colorType="warning"
                icon="pause"
                iconClassName="holdIcon"
                onClick={[Function]}
                text="Удержать"
              >
                <Button
                  className="button holdButton"
                  colorType="warning"
                  onClick={[Function]}
                >
                  <button
                    className="button warning button holdButton"
                    onClick={[Function]}
                  >
                    <span
                      className=""
                    >
                      <span
                        className="webphoneButton"
                      >
                        <icon-mock
                          className="webphoneButton_icon holdIcon"
                        />
                        <span
                          className="webphoneButton_text"
                        >
                          Удержать
                        </span>
                      </span>
                    </span>
                  </button>
                </Button>
              </Component>
            </Component>
            <Component>
              <Component
                buttonClassName="button"
                colorType="warning"
                icon="microphone"
                iconClassName="microphoneIcon"
                onClick={[Function]}
                text="Выкл. микрофон"
              >
                <Button
                  className="button"
                  colorType="warning"
                  onClick={[Function]}
                >
                  <button
                    className="button warning button"
                    onClick={[Function]}
                  >
                    <span
                      className=""
                    >
                      <span
                        className="webphoneButton"
                      >
                        <icon-mock
                          className="webphoneButton_icon microphoneIcon"
                        />
                        <span
                          className="webphoneButton_text"
                        >
                          Выкл. микрофон
                        </span>
                      </span>
                    </span>
                  </button>
                </Button>
              </Component>
            </Component>
          </div>
          <Component>
            <Button
              className="button"
              colorType="negative"
              onClick={[Function]}
            >
              <button
                className="button negative button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Завершить
                </span>
              </button>
            </Button>
          </Component>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;

exports[`Webphone panels should display RegisterPanel with status: Connecting 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="callNotClientPanelContainer"
        >
          <Component>
            <div>
              <span>
                Статус:
              </span>
              <span>
                Соединение...
              </span>
            </div>
          </Component>
          <Input
            dontShowPlaceholderIfFocused={true}
            onChange={[Function]}
            placeholder="Телефон не клиента в формате +7..."
            status={null}
            value=""
          >
            <div
              className="input      "
            >
              <div
                className="input_container "
                onFocus={[Function]}
                tabIndex={0}
              >
                <input
                  className=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  placeholder="Телефон не клиента в формате +7...  "
                  type=""
                  value=""
                />
                <div
                  className="controls controlsFocusedNoPlaceholder"
                >
                  <Memo()
                    onClick={[Function]}
                  >
                    <div
                      className="close "
                      onClick={[Function]}
                    />
                  </Memo()>
                </div>
              </div>
            </div>
          </Input>
          <Connect(Component)
            client=""
            disabled={true}
          >
            <Component
              callEnded={false}
              callFromWebphone={[Function]}
              client=""
              disabled={true}
              setCallMetaInfo={[Function]}
            >
              <div
                className="callButtonContainer "
              >
                <Component
                  client=""
                  disabled={true}
                  setCallRecipient={[Function]}
                  userName=""
                >
                  <Component
                    buttonClassName="button "
                    colorType="positive"
                    disabled={true}
                    icon="phone"
                    iconClassName="callButtonIconDisabled"
                    onClick={[Function]}
                    text="Позвонить не клиенту"
                  >
                    <Button
                      className="button "
                      colorType="positive"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <button
                        className="button positive disabled button "
                        onClick={[Function]}
                      >
                        <span
                          className=""
                        >
                          <span
                            className="webphoneButton"
                          >
                            <icon-mock
                              className="webphoneButton_icon callButtonIconDisabled"
                            />
                            <span
                              className="webphoneButton_text"
                            >
                              Позвонить не клиенту
                            </span>
                          </span>
                        </span>
                      </button>
                    </Button>
                  </Component>
                </Component>
                <Component
                  callSource="default_call_source"
                  disabled={true}
                  onSelect={[Function]}
                >
                  <Component
                    colorType="positive"
                    disabled={true}
                    displayArrowIcon={true}
                    id="call-source-1"
                    initialSelectedValue="default_call_source"
                    markIfNonDefaultChoice={true}
                    onSelect={[Function]}
                    options={
                      Array [
                        Object {
                          "isDefault": true,
                          "label": "Позвонить на номер",
                          "value": "default_call_source",
                        },
                        Object {
                          "label": "Позвонить от лица клиента",
                          "value": "custom_call_source",
                        },
                      ]
                    }
                  >
                    <Component
                      className=""
                      colorType="positive"
                      disabled={true}
                      displayArrowIcon={true}
                      popupContent={
                        <Unknown
                          className="options"
                          colorType="positive"
                          id="call-source-1"
                          initialSelectedValue="default_call_source"
                          onSelect={[Function]}
                          options={
                            Array [
                              Object {
                                "isDefault": true,
                                "label": "Позвонить на номер",
                                "value": "default_call_source",
                              },
                              Object {
                                "label": "Позвонить от лица клиента",
                                "value": "custom_call_source",
                              },
                            ]
                          }
                        />
                      }
                    >
                      <div
                        className="container containerColor_positive verticalDropDirection_down horizontalDropDirection_right dropDirection_down_right"
                      >
                        <Button
                          basic={true}
                          buttonRef={
                            Object {
                              "current": <button
                                class="button positive basic disabled popupButton  displayArrowIcon "
                              >
                                <span
                                  class=""
                                >
                                  ▲
                                </span>
                              </button>,
                            }
                          }
                          childrenRef={
                            Object {
                              "current": <span
                                class=""
                              >
                                ▲
                              </span>,
                            }
                          }
                          className="popupButton  displayArrowIcon "
                          colorType="positive"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <button
                            className="button positive basic disabled popupButton  displayArrowIcon "
                            onClick={[Function]}
                          >
                            <span
                              className=""
                            >
                              ▲
                            </span>
                          </button>
                        </Button>
                      </div>
                    </Component>
                  </Component>
                </Component>
              </div>
            </Component>
          </Connect(Component)>
          <Component>
            <Button
              basic={true}
              className="button"
              isLoading={false}
              onClick={[Function]}
            >
              <button
                className="button primary basic button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Скачать лог телефонии
                </span>
              </button>
            </Button>
          </Component>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;

exports[`Webphone panels should display RegisterPanel with status: NotRegistered 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <div
      className="webphonePanel"
    >
      <Component>
        <div
          className="registerPanelContainer"
        >
          <Component>
            <div>
              <span>
                Статус:
              </span>
              <span>
                Не зарегистрирован
              </span>
            </div>
          </Component>
          <Component>
            <Button
              className="button"
              onClick={[Function]}
            >
              <button
                className="button primary button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Зарегистрироваться в телефонии
                </span>
              </button>
            </Button>
          </Component>
          <Component>
            <Button
              basic={true}
              className="button"
              isLoading={false}
              onClick={[Function]}
            >
              <button
                className="button primary basic button"
                onClick={[Function]}
              >
                <span
                  className=""
                >
                  Скачать лог телефонии
                </span>
              </button>
            </Button>
          </Component>
        </div>
      </Component>
    </div>
  </Component>
</Provider>
`;
